--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CS Lab</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  
+
 <!-- Start Landing Page -->
 
 <div class="landing-page">
@@ -25,3 +36,5 @@
 </div>
 
 <!-- End Landing Page -->
+</body>
+</html>
